writing through all sections

--- a/2025/2025-07-13-wir.md
+++ b/2025/2025-07-13-wir.md
@@ -1,8 +1,8 @@
-# tktk
+# TKTKTK
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+![Nvidai CEO Jensen Huang at a tech conference in Tapei](https://upload.wikimedia.org/wikipedia/commons/9/9e/11.09_%E7%B8%BD%E7%B5%B1%E5%87%BA%E5%B8%AD%E3%80%8C%E7%AC%AC%E4%B8%80%E5%B1%86%E6%9D%8E%E5%9C%8B%E9%BC%8E%E7%8D%8E%E9%A0%92%E7%8D%8E%E5%85%B8%E7%A6%AE%E3%80%8D_-_53319959776.jpg)
+*Nvidia CEO Jensen Huang at a tech awards ceremony in Tapei in 2023. Photo by Simon Liu via Wikimedia Commons*
 
 <hr>
 
@@ -14,38 +14,55 @@
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda. <!-- Riff on upcoming "crypto week" in Washington. -->
+**In a gold rush,** sell shovels.
 
-- Crypto Week is coming up in Washington: https://decrypt.co/329850/house-democrats-struggle-approach-crypto-week-unified-front | Politico preview: https://www.politico.com/live-updates/2025/07/10/congress/house-senate-crypto-bill-trump-stablecoin-00447633 | Global regulation scorecard isn't as simple as sometimes assumed: https://hackernoon.com/a-peek-at-how-regulation-molds-the-scoreboard-cryptos-global-ledger?source=rss
+So goes an old saying that probably originated in California's [famous mining boom](https://en.wikipedia.org/wiki/California_gold_rush) of the mid-nineteenth century. But it's also a handy metaphor for the tech industry's most cutting-edge product categories right now.
 
-- Grayscale is disputing the SEC's decision to block the launch of its multi-token fund. https://www.theblock.co/post/362239/grayscale-presses-sec-to-allow-its-multi-crypto-fund-to-launch-citing-investor-harm | Coinbase disputing Oregon state regulatory action: https://www.theblock.co/post/362301/coinbase-sues-oregon-gov-kotek-for-public-records-over-crypto-policy-shift-amid-charges-brought-against-the-firm
+Witness the stock-market milestone that chipmaker Nvidia hit on Wednesday, becoming the first public company in history to reach a [$4 trillion valuation](https://apnews.com/article/nvidia-4-trillion-chipmaker-7947e86a7ee9a994b9f16c3c0779b74f).
 
-- New Trump disclosure on crypto self-dealing: https://www.forbes.com/sites/zacheverson/2025/07/12/trump-world-liberty-financial-crypto-sec-tokens-wlfi-usd1/ | https://www.nytimes.com/2025/07/09/business/truth-social-trump-media-crypto.html
+Of course, the company has achieved its record run by becoming a major benificiary of the boom in AI. But Nvidia isn't creating the best large language model, the most clever algorithm, or wrestling with the ethics of when a bot truly qualifies as sentient.
 
-- Florida's AG is investigating Robinhood: https://decrypt.co/329664/florida-ag-investigates-robinhood-crypto-pricing
+It just makes components for the powerful computers everyone else needs even to pursue breakthroughs in these areas in the first place. Whether any individual AI competitor fails or actually succeeds — ergo strikes gold — is mostly immaterial to Nvidia. They get paid up front by selling everyone tools for the attempt.
 
-Pump.fun raised $500M in 12 minutes: https://www.theblock.co/post/362320/pump-fun-raises-500-million-in-12-minutes-as-pump-tokens-fully-sell-out
+Over in crypto world, we can see a similar dynamic right now in Ethereum, where the share of native ether tokens staked to the network just [hit a record 29.4%](https://www.theblock.co/post/361372/pectra-upgrade-spurs-eth-staking-surge-consolidating-validators-and-cutting-costs).
 
- <hr>
+That means more token holders are making their ether available to provide computing capacity and security for decentralized applications that run on the Ethereum network. In return, they get paid a small yield on their staked tokens.
 
- [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
- https://dribbble.com/roobinium)
+Do the tokenholders need to build any applications themselves to get this payment? Nope. Does it matter if any of the applications that other people build become as big as Instagram? Nope.
 
- <hr>
+Staking is pure selling shovels.
+
+For handy counter-examples, just check out any product-focused company run by Elon Musk. They're all essentially gold prospecting that's only turning up gravel and weeds right now.
+
+Tesla saw its market cap [tumble $68 billion](https://www.cnbc.com/2025/07/07/tesla-tsla-shares-today.html) in a day after Musk recently announced plans to launch a new U.S. political party. Shareholders are increasingly wary of such political activities as a distraction from his management of Tesla. Meanwhile, X/Twitter CEO Linda Yaccarino resigned Wednesday after a [tumultuous two-year run](https://www.msn.com/en-us/money/companies/linda-yaccarino-steps-down-as-ceo-of-x-amid-user-decline-and-controversy/ar-AA1IiJdB) during which the social platform's valuation was off 70% at its low. And X/Twitter has [faced a PR firestorm](https://www.npr.org/2025/07/09/nx-s1-5462609/grok-elon-musk-antisemitic-racist-content) since its integrated AI bot Grok started spewing hateful comments and referring to itself as "MechaHitler."
+
+A lot of downsides there you won't find in the shovel business.
+
+<!--
+
+<hr>
+
+[![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
+https://dribbble.com/roobinium)
+
+<hr>
+
+-->
 
 ### Five Things: July 6-12, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Markets: New bitcoin record. https://www.cnbc.com/2025/07/11/crypto-market-today.html | Optimism on regulation: https://www.reuters.com/business/bitcoins-record-high-lifts-crypto-stocks-renewed-regulatory-optimism-2025-07-11/ | Dollar weakness: https://www.reuters.com/world/middle-east/dollar-rises-loonie-falls-trump-announces-new-tariffs-2025-07-11/ | ETH ETFs inflows surge, including 300M day for Blackrock https://www.coindesk.com/markets/2025/07/11/ethereum-etfs-see-inflow-surge-as-blackrocks-etha-draws-in-record-300m-in-a-day | https://nypost.com/2025/07/11/business/wall-street-is-using-its-bitcoin-playbook-to-bet-on-ethereum/ | https://finance.yahoo.com/video/bitcoin-hits-record-high-heres-213003110.html | https://decrypt.co/329677/bitcoin-etfs-post-second-biggest-day-ever-why-it-matters | IBIT became the fastest ETF ever to hit an $80B capitalization: https://www.coindesk.com/markets/2025/07/11/spot-bitcoin-etfs-see-usd1b-inflows-as-ibit-becomes-fastest-fund-to-hit-usd80b-in-assets
 
-- ETH staking is at an all-time high, driven by the Pectra upgrade. https://www.theblock.co/post/361372/pectra-upgrade-spurs-eth-staking-surge-consolidating-validators-and-cutting-costs
+- **Bitcoin set new all-time highs near $120,000,** propeled by a [wave of buying](https://www.cnbc.com/2025/07/11/crypto-market-today.html) late in the week that has continued going into Monday's trading. Investors have been piling into Wall Street's listed bitcoin funds in particular, emboldened by an [improved U.S. regulatory outlook](https://www.reuters.com/business/bitcoins-record-high-lifts-crypto-stocks-renewed-regulatory-optimism-2025-07-11/) and continued [pressure from tarriffs](https://www.reuters.com/world/middle-east/dollar-rises-loonie-falls-trump-announces-new-tariffs-2025-07-11/) on the dollar's role in global trade.
 
-- Robinhood is offering European users tokenized stocks: https://uk.finance.yahoo.com/news/robinhood-crypto-trading-blockchain-tokenised-stocks-050022670.html
+- **Robinhood has begun** offering European customers [tokenized U.S. stocks](https://uk.finance.yahoo.com/news/robinhood-crypto-trading-blockchain-tokenised-stocks-050022670.html). Ironically, such trading hasn't yet been approved in America itself. But the big crypto exchanges are lobbying federal regulators to OK it.
 
-- More treasury moves: Solana treasury firm Upexi is raising another $200M: https://decrypt.co/329838/solana-treasury-firm-upexi-raises-200-million-boost-sol-stash | SharpLink bought 10,000 ETH from the Ethereum Foundation for its treasury: https://www.coindesk.com/markets/2025/07/11/ethereum-foundation-sells-10000-eth-to-sharplink-in-first-such-otc-deal
+- **More U.S. regulatory updates:** Florida's state attorney general is [investigating](https://decrypt.co/329664/florida-ag-investigates-robinhood-crypto-pricing) the impact of Robinhood's payment-for-order-flow model on the pricing of customers' trades... Grayscale sent a letter to the Securities and Exchange Commission [pushing back](https://www.theblock.co/post/362239/grayscale-presses-sec-to-allow-its-multi-crypto-fund-to-launch-citing-investor-harm) against the market watchdog's recent decision to put a pause on a multi-crypto fund proposed by Grayscale... [Coinbase sued Oregon's governor](https://www.theblock.co/post/362301/coinbase-sues-oregon-gov-kotek-for-public-records-over-crypto-policy-shift-amid-charges-brought-against-the-firm) for public release of documents related to the state's policy shifts on crypto trading there.
 
-- Yaccarino resigned from X: https://www.salon.com/2025/07/09/yaccarino-resigns-as-ceo-of-x-day-after-mechahitler-posts/ | Decrypt reviewer didn't like Grok 4: https://decrypt.co/329866/grok-4-basic-review-elon-musk-ai-thinks-like-him
+- **President Trump's personal crypto ventures are mushrooming.** Forbes reports that World Liberty Financial just raised $52.1 million through private sales of its crypto token — likely sending tens of millions of dollars [to the Trump family](https://www.forbes.com/sites/zacheverson/2025/07/12/trump-world-liberty-financial-crypto-sec-tokens-wlfi-usd1/). Separately, the New York Times reports that Trump Media & Technology Group is increasingly [pivoting to crypto](https://news.google.com/read/CBMihwFBVV95cUxOOUgzVlVfX1RyNDdZY0YzTzNucEFXSXBCcDNKTVRZVExyZGFTQzRhampsUDhxcVdnZTB0eTlvcmcyUHdYOXNxWExaZ25NVks3R1l4aEwwTWZBOUVIaFJScGgtSG9rUmVXS1hvOVNYWDVOOWg5ejRaUDlPY1JhcDR2RkZNdUtxb3c?hl=en-US&gl=US&ceid=US%3Aen) as a moneymaker in lieu of its unprofitable Truth Social platform. The company has recently raised $2.5 billion to invest in bitcoin, with plans to offer exchange-traded funds (ETFs) pegged to crypto as well.
+
+- **Public companies' crypto strategies are no longer limited to bitcoin only.** Upexi raised another $200 million to add to its stash [of Solana tokens](https://decrypt.co/329838/solana-treasury-firm-upexi-raises-200-million-boost-sol-stash)... Meanwhile, SharpLink Gaming bought 10,000 ether tokens [from the Ethereum Foundation](https://www.coindesk.com/markets/2025/07/11/ethereum-foundation-sells-10000-eth-to-sharplink-in-first-such-otc-deal) for its corporate cash reserves. The transaction marks the first time a listed company has directly acquired ether from Ethereum’s main steward.
 
 ### Market Snapshot
 
@@ -65,37 +82,37 @@ Pump.fun raised $500M in 12 minutes: https://www.theblock.co/post/362320/pump-fu
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$103,506.35</td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$118,029.49</td>
+     <td>+7.5%</td>
+     <td>+25.8%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td>21,626.39</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>22,780.60</td>
+     <td>-0.4%</td>
+     <td>+8.4%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$3,384.40/oz</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>$3,364.00</td>
+     <td>+1.0%</td>
+     <td>+27.9%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td>98.77</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>97.87</td>
+     <td>+0.7%</td>
+     <td>-9.8%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.375%</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>4.423%</td>
+     <td>+0.08</td>
+     <td>-0.15</td>
    </tr>
 
 </tbody>
@@ -104,17 +121,17 @@ Pump.fun raised $500M in 12 minutes: https://www.theblock.co/post/362320/pump-fu
 
 ### Looking Ahead
 
-- Scifi author martha wells says we're a loooong way from AGI: https://www.scientificamerican.com/article/were-light-years-away-from-true-artificial-intelligence-says-murderbot/
+- **It's "Crypto Week" in Washington.** The House is poised to take up the stablecoin-focused Genius Act and the Clarity Act, which would create a broader regulatory framework for the trading of digital assets in the U.S. The former bill has already been passed by the full Senate. If the House approves it as well, President Trump is expected to sign it into law quickly. ([Decrypt](https://decrypt.co/329850/house-democrats-struggle-approach-crypto-week-unified-front))
 
-- Explainers: Graham Stephens on BTC <!-- Link tk  | Why AI gets it wrong so often: https://hackernoon.com/why-ai-gets-it-wrong-more-than-you-think?source=rss
+- **The Wall Street Journal's Christopher Mims** warns that other countries may soon benefit from a [reverse "brain drain"](https://www.wsj.com/politics/policy/us-brain-drain-recruitment-02df18a7?st=Zi89Cz&reflink=desktopwebshare_permalink) of foreign-born entrepreneurs, engineers, and other high-skilled workers away from America due to increasingly strict immigration policies and cuts to research funding here.
 
-- CME lawsuit: https://www.bloomberg.com/opinion/newsletters/2025-07-08/floor-traders-want-their-seats-back?cmpid=BBD070825_MONEYSTUFF
+- **Science fiction author Martha Wells** tell Scientific American she believes humanity is still ["years and years and years away"](https://www.scientificamerican.com/article/were-light-years-away-from-true-artificial-intelligence-says-murderbot/) from creating sophisticated, generally intelligent bots along the lines depicted in her dystopian novels.
 
 ### Odds & Ends
 
-- Salon writer refuses to surrender her beloved em dash: https://www.salon.com/2025/06/11/ai-cant-have-my-em-dash/
+- **Salon's Andi Zeisler** refuses to surrender [her beloved em dash](https://www.salon.com/2025/06/11/ai-cant-have-my-em-dash/) to AI. The punctuation mark has recently garnered criticism as a telltale sign of AI-generated content. But Zeisler points out  — correctly so — that many of us 100% human writers were fans of the em dash long before AI apps went into mass usage.
 
-- People are still building trebuchets: https://slate.com/news-and-politics/2025/07/trebuchet-catapult-meaning-difference-define-work.html
+- **Slate's Sam Kean reports** there is an active enthusiast community still [building giant medieval catapults](https://slate.com/news-and-politics/2025/07/trebuchet-catapult-meaning-difference-define-work.html) known as trebuchets. Some modern iterations can hurl boulders 125 miles per hour. Handy!
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
