Adding final hed, subhead, with an assist from Copilot

--- a/2025/2025-07-13-wir.md
+++ b/2025/2025-07-13-wir.md
@@ -1,5 +1,5 @@
-# TKTKTK
-## tktk
+# Emerging tech's toolmakers are winning.
+## Ethereum stakers and Nvidia's AI-fueled chip sales highlight an old lesson about market booms.
 
 ![Nvidai CEO Jensen Huang at a tech conference in Tapei](https://upload.wikimedia.org/wikipedia/commons/9/9e/11.09_%E7%B8%BD%E7%B5%B1%E5%87%BA%E5%B8%AD%E3%80%8C%E7%AC%AC%E4%B8%80%E5%B1%86%E6%9D%8E%E5%9C%8B%E9%BC%8E%E7%8D%8E%E9%A0%92%E7%8D%8E%E5%85%B8%E7%A6%AE%E3%80%8D_-_53319959776.jpg)
 *Nvidia CEO Jensen Huang at a tech awards ceremony in Tapei in 2023. Photo by Simon Liu via Wikimedia Commons*
@@ -32,11 +32,13 @@ Do the tokenholders need to build any applications themselves to get this paymen
 
 Staking is pure selling shovels.
 
-For handy counter-examples, just check out any product-focused company run by Elon Musk. They're all essentially gold prospecting that's only turning up gravel and weeds right now.
+Want handy counter-examples to further illustrate the point? Check out any product-focused company run by Elon Musk right now.
 
-Tesla saw its market cap [tumble $68 billion](https://www.cnbc.com/2025/07/07/tesla-tsla-shares-today.html) in a day after Musk recently announced plans to launch a new U.S. political party. Shareholders are increasingly wary of such political activities as a distraction from his management of Tesla. Meanwhile, X/Twitter CEO Linda Yaccarino resigned Wednesday after a [tumultuous two-year run](https://www.msn.com/en-us/money/companies/linda-yaccarino-steps-down-as-ceo-of-x-amid-user-decline-and-controversy/ar-AA1IiJdB) during which the social platform's valuation was off 70% at its low. And X/Twitter has [faced a PR firestorm](https://www.npr.org/2025/07/09/nx-s1-5462609/grok-elon-musk-antisemitic-racist-content) since its integrated AI bot Grok started spewing hateful comments and referring to itself as "MechaHitler."
+Tesla saw its market cap [tumble $68 billion](https://www.cnbc.com/2025/07/07/tesla-tsla-shares-today.html) in a day after Musk recently announced plans to launch a new U.S. political party. Shareholders are increasingly fed up with such political activities as a distraction from his management of Tesla.
 
-A lot of downsides there you won't find in the shovel business.
+Meanwhile, X/Twitter CEO Linda Yaccarino resigned Wednesday after a [tumultuous two-year run](https://www.msn.com/en-us/money/companies/linda-yaccarino-steps-down-as-ceo-of-x-amid-user-decline-and-controversy/ar-AA1IiJdB) during which the social platform's valuation was off 70% at its low. And X/Twitter has [faced a PR firestorm](https://www.npr.org/2025/07/09/nx-s1-5462609/grok-elon-musk-antisemitic-racist-content) since its integrated AI bot Grok started spewing hateful comments and referring to itself as "MechaHitler."
+
+In other words, there are a lot of downsides here that aren't present in the shovel business. Instead, Musk's companies for now are more akin to gold prospecting that's only turning up gravel and weeds.
 
 <!--
 
