Final markets data + writethrough

--- a/2025/2025-07-20-wir.md
+++ b/2025/2025-07-20-wir.md
@@ -37,53 +37,55 @@ https://www.nbcnews.com/tech/internet/maga-ai-bot-network-divided-trump-epstein-
 
 ### Market Snapshot
 
-*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
+*A quick look at some major indicators as of Friday's market close on Wall Street.*
 
 <table>
+
 
   <thead>
     <tr>
       <th>Indicator</th>
       <th>Close</th>
-      <th>Weekly %</th>
-      <th>YTD %</th>
+      <th>Weekly</th>
+      <th>YTD</th>
     </tr>
   </thead>
 
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$103,506.35</td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$117,416.94</td>
+     <td>-0.5%</td>
+     <td>+25.1%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td>21,626.39</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>23,065.47</td>
+     <td>+1.3%</td>
+     <td>+9.8%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$3,384.40/oz</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>$3,358.30/oz</td>
+     <td>-0.2%</td>
+     <td>+27.7%</td>
    </tr>
+
 
    <tr>
      <td>USD Index</td>
-     <td>98.77</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>98.46</td>
+     <td>+0.6%</td>
+     <td>-9.2%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.375%</td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>4.432%</td>
+     <td>+0.010</td>
+     <td>-0.140</td>
    </tr>
 
 </tbody>
