Writing through all sections

--- a/2025/2025-07-20-wir.md
+++ b/2025/2025-07-20-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# Even MAGA's AI bots are conflicted over Epstein
+## Washington's latest political scandal is indirectly providing insight into how this cutting-edge tech really works.
 
 <hr>
 
@@ -9,17 +9,25 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**Seems the MAGA movement's army of AI bots,** not just its people, are now in a civil war over Jeffrey Epstein.
 
-<!-- Pending "Five Things" summaries, this is best option so far to riff on for the lead item -->
+To wit, a fascinating story today from [NBC News](https://www.nbcnews.com/tech/internet/maga-ai-bot-network-divided-trump-epstein-backlash-rcna219167):
 
-MAGA's bots, not just its people, are in a civil war over Epstein
+<blockquote><em>
 
-https://www.nbcnews.com/tech/internet/maga-ai-bot-network-divided-trump-epstein-backlash-rcna219167
+  <p>A previously unreported network of hundreds of accounts on X is using artificial intelligence to automatically reply to conservatives with positive messages about people in the Trump administration, researchers say.</p>
 
-<!-- Related AI stories to segue to... -->
+  <p>But with the MAGA movement split over the administration’s handling of files involving deceased sex offender Jeffrey Epstein, the accounts’ messaging has broken, offering contradictory statements on the issue and revealing the AI-fueled nature of the accounts.</p>
 
-404 Media writer says media industry's embrace of AI won't work: https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter | https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic | https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/ | https://gizmodo.com/billionaires-convince-themselves-ai-is-close-to-making-new-scientific-discoveries-2000629060
+  <p>The network, tracked for NBC News by both the social media analytics company Alethea and researchers at Clemson University, consists of more than 400 identified bot accounts, though the number could be far larger, the researchers say. Its accounts offer consistent praise for key Trump figures, particularly support for Health Secretary Robert F. Kennedy Jr. and White House press secretary Karoline Leavitt.</p></em>
+
+</blockquote>
+
+Putting the politics aside for a moment, it strikes me this incident is also a handy reminder why we should resist the frequent urge to ascribe agency to current AI tools that they don't yet have. 
+
+In other words, reading NBC's reporting, it's crystal clear the AI bots in question are being influenced, even mimicking, the divide they're [witnessing among real humans](https://www.politico.com/news/magazine/2025/07/14/maga-factions-epstein-fallout-reactions-00452358) over the topic of Epstein on social media right now. The bots clearly aren't devising and promoting opinions that are truly their own.
+
+And the same holds true on countless other topics we might query AI about each day. Their responses are still very much a reflection of us humans, not the other way about, not something out of whatever sci-fi fantasy we saw in a movie. Not yet.
 
 ### Five Things: July 13-19, 2025
 
