Writing through all sections

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -16,13 +16,15 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-<!--
+<!-- Round up several links about China's AI policy + startups...
+ -->
 
-- Hater's guide to the AI bubble. https://www.wheresyoured.at/the-haters-gui/
+- CCP calls for global AI cooperation. ([The Guardian](https://www.theguardian.com/technology/2025/jul/26/china-calls-for-global-ai-cooperation-days-after-trump-administration-unveils-low-regulation-strategy)) 
 
-- From the archives: https://w3wnews.substack.com/p/20357944_-w3w-07-14-24
+- New Huawei AI system. ([Reuters](https://www.reuters.com/world/china/huawei-shows-off-ai-computing-system-rival-nvidias-top-product-2025-07-26/)) 
 
-- 404 Media writer says media industry's embrace of AI won't work: https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter | https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic | https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/ | https://gizmodo.com/billionaires-convince-themselves-ai-is-close-to-making-new-scientific-discoveries-2000629060
+- New government action plan. ([CNBC](https://www.cnbc.com/2025/07/26/china-ai-action-plan.html)) 
+
 <!--
 
 <hr>
@@ -38,18 +40,23 @@ https://dribbble.com/roobinium)
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bloomberg Crypto: TKTK
-- Reuters: Tokenization of RWA is gaining ground. https://www.fastcompany.com/91373072/tokenization-crypto-explainer
-- tk
-- tk
-- tk
+- https://decrypt.co/331906/ethereum-etfs-massively-outpace-bitcoin-funds
+
+- **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling.
+
+- Reuters: Tokenization of RWA is gaining ground. https://www.fastcompany.com/91373072/tokenization-crypto-explainer | Christie's is opening a crypto real estate division: https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen
+
+- Crypto games are shutting down. ([Decrypt](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in))
+
+- Wyoming stablecoin bill ([Decrypt](https://decrypt.co/331948/wyoming-stablecoin-billed-yield-bearing-alternative-cbdc-control))
+
+- **More crypto scams:** BTC ATM scam to catch other scammers ([Decrypt](https://decrypt.co/331845/fake-bitcoin-atm-scheme-wasted-4000-hours-scammers-time)) | The widow of country music legend George Jones was victimized. ([TK]()) | AI crypto scams rising, expert says. ([]()) 
 
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
 <table>
-
 
   <thead>
     <tr>
@@ -99,22 +106,38 @@ https://dribbble.com/roobinium)
 </tbody>
 </table>
 
-
 ### Looking Ahead
 
-- A culture war is brewing over whether AI bots should have rights. https://www.salon.com/2025/06/10/a-culture-is-brewing-over-moral-concern-for-ai_partner/ | https://www.scientificamerican.com/article/could-inflicting-pain-test-ai-for-sentience/
+- Rana Faroohar on the risks of a crypto crisis. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen))
 
-- tk
-- tk
+- A culture war is brewing over whether AI bots should have rights. ([Salon](https://www.salon.com/2025/06/10/a-culture-is-brewing-over-moral-concern-for-ai_partner/ | https://www.scientificamerican.com/article/could-inflicting-pain-test-ai-for-sentience/))
+
+
+
+- **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) 
+
+| But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
 
 ### Odds & Ends
 
-- Chuck E Cheese arrest in Tallahassee <!-- Link TK -->
+- Amateur stargazers have been capturing some amazing photos. ([Space.com](https://www.space.com/stargazing/amateur-astrophotographer-captures-trio-of-breathtaking-nebulas-from-the-central-australian-desert-photos)) 
 
-- https://www.space.com/stargazing/amateur-astrophotographer-captures-trio-of-breathtaking-nebulas-from-the-central-australian-desert-photos
-
+- **Chuck E. Cheese got pinched.** Arrest in Tallahassee ([]()) 
+ 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+<!--
+
+Cutting room floor. Save these for next week or beyond...
+
+- Hater's guide to the AI bubble. https://www.wheresyoured.at/the-haters-gui/
+
+- From the archives: Take the algos out of your news diet... https://w3wnews.substack.com/p/20357944_-w3w-07-14-24
+
+- https://gizmodo.com/billionaires-convince-themselves-ai-is-close-to-making-new-scientific-discoveries-2000629060
+
+--> 
