Adding photo + writethrough in all sections

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,8 +1,8 @@
 # tktk
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://unsplash.com/photos/two-hands-touching-each-other-in-front-of-a-pink-background-gVQLAbGVB6Q)
+*Photo illustration by Igor Omilaev via Unsplash*
 
 <hr>
 
@@ -23,7 +23,9 @@
 
 - New Huawei AI system. ([Reuters](https://www.reuters.com/world/china/huawei-shows-off-ai-computing-system-rival-nvidias-top-product-2025-07-26/)) 
 
-- New government action plan. ([CNBC](https://www.cnbc.com/2025/07/26/china-ai-action-plan.html)) 
+- New Chinese government action plan. ([CNBC](https://www.cnbc.com/2025/07/26/china-ai-action-plan.html)) 
+
+- White House announced one as well. ([CNET](https://www.cnet.com/tech/services-and-software/trumps-ai-action-plan-is-here-5-key-takeaways/))
 
 <!--
 
@@ -42,7 +44,7 @@ https://dribbble.com/roobinium)
 
 - https://decrypt.co/331906/ethereum-etfs-massively-outpace-bitcoin-funds
 
-- **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling.
+- **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling. ([CNBC](https://www.cnbc.com/2025/07/24/tesla-bitcoin-crypto-sale.html)) | ARK has been selling crypto-related shares like Robinhood and Coinbase. ([Yahoo Finance](https://finance.yahoo.com/news/cathie-wood-sells-crypto-stocks-133854499.html?guccounter=1&guce_referrer=aHR0cHM6Ly9uZXdzLmdvb2dsZS5jb20v&guce_referrer_sig=AQAAAIvOdOVjbp5d36tgkvs3KGo7dDf3vfx6Tl3cAB-EDtpr8j-LgmMvCWXen1TMr7a1OeyB8uHAY26OOwMoVavfa2G1_JRIx8-rIVXuVkMnH-2Hn2EMPZlx-Ugonm3d6zRdlsnmuM0VTmj8ggrvRFnhAvHIDHq19ahvst_w1ctN9ekT)) 
 
 - Reuters: Tokenization of RWA is gaining ground. https://www.fastcompany.com/91373072/tokenization-crypto-explainer | Christie's is opening a crypto real estate division: https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen
 
@@ -50,7 +52,7 @@ https://dribbble.com/roobinium)
 
 - Wyoming stablecoin bill ([Decrypt](https://decrypt.co/331948/wyoming-stablecoin-billed-yield-bearing-alternative-cbdc-control))
 
-- **More crypto scams:** BTC ATM scam to catch other scammers ([Decrypt](https://decrypt.co/331845/fake-bitcoin-atm-scheme-wasted-4000-hours-scammers-time)) | The widow of country music legend George Jones was victimized. ([TK]()) | AI crypto scams rising, expert says. ([]()) 
+- **More crypto scams:** BTC ATM scam to catch other scammers ([Decrypt](https://decrypt.co/331845/fake-bitcoin-atm-scheme-wasted-4000-hours-scammers-time)) | The widow of country music legend George Jones was victimized. ([WKRN](https://www.wkrn.com/news/local-news/george-jones-widow-crypto-theft/)) | AI crypto scams rising, expert says. ([New York Post](https://nypost.com/2025/07/26/tech/ai-fueled-crypto-scams-surging-in-nyc-and-beyond-expert-warns/)) | NY suspects released on bail. ([CNN](https://www.cnn.com/2025/07/24/us/suspects-new-york-crypto-kidnapping-bail-hnk))
 
 ### Market Snapshot
 
@@ -112,11 +114,7 @@ https://dribbble.com/roobinium)
 
 - A culture war is brewing over whether AI bots should have rights. ([Salon](https://www.salon.com/2025/06/10/a-culture-is-brewing-over-moral-concern-for-ai_partner/ | https://www.scientificamerican.com/article/could-inflicting-pain-test-ai-for-sentience/))
 
-
-
-- **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) 
-
-| But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
+- **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) | But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
 
 ### Odds & Ends
 
