--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,7 +1,7 @@
 # tktk
 ## tktk
 
-![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://unsplash.com/photos/two-hands-touching-each-other-in-front-of-a-pink-background-gVQLAbGVB6Q)
+![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d)
 *Photo illustration by Igor Omilaev via Unsplash*
 
 <hr>
