--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,7 +1,7 @@
 # tktk
 ## tktk
 
-![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d)
+![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo illustration by Igor Omilaev via Unsplash*
 
 <hr>
