Writing through + making some cuts...

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,7 +1,7 @@
 # tktk
 ## tktk
 
-![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d)
 *Photo illustration by Igor Omilaev via Unsplash*
 
 <hr>
@@ -47,8 +47,6 @@ https://dribbble.com/roobinium)
 - **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling. ([CNBC](https://www.cnbc.com/2025/07/24/tesla-bitcoin-crypto-sale.html)) | ARK has been selling crypto-related shares like Robinhood and Coinbase. ([Yahoo Finance](https://finance.yahoo.com/news/cathie-wood-sells-crypto-stocks-133854499.html?guccounter=1&guce_referrer=aHR0cHM6Ly9uZXdzLmdvb2dsZS5jb20v&guce_referrer_sig=AQAAAIvOdOVjbp5d36tgkvs3KGo7dDf3vfx6Tl3cAB-EDtpr8j-LgmMvCWXen1TMr7a1OeyB8uHAY26OOwMoVavfa2G1_JRIx8-rIVXuVkMnH-2Hn2EMPZlx-Ugonm3d6zRdlsnmuM0VTmj8ggrvRFnhAvHIDHq19ahvst_w1ctN9ekT)) 
 
 - Reuters: Tokenization of RWA is gaining ground. https://www.fastcompany.com/91373072/tokenization-crypto-explainer | Christie's is opening a crypto real estate division: https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen
-
-- Crypto games are shutting down. ([Decrypt](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in))
 
 - Wyoming stablecoin bill ([Decrypt](https://decrypt.co/331948/wyoming-stablecoin-billed-yield-bearing-alternative-cbdc-control))
 
@@ -112,7 +110,7 @@ https://dribbble.com/roobinium)
 
 - Rana Faroohar on the risks of a crypto crisis. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen))
 
-- A culture war is brewing over whether AI bots should have rights. ([Salon](https://www.salon.com/2025/06/10/a-culture-is-brewing-over-moral-concern-for-ai_partner/ | https://www.scientificamerican.com/article/could-inflicting-pain-test-ai-for-sentience/))
+- Crypto games are shutting down. ([Decrypt](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in))
 
 - **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) | But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
 
@@ -127,15 +125,3 @@ _**That's it for now. Thanks for reading the newsletter today! If you want to kn
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
-
-<!--
-
-Cutting room floor. Save these for next week or beyond...
-
-- Hater's guide to the AI bubble. https://www.wheresyoured.at/the-haters-gui/
-
-- From the archives: Take the algos out of your news diet... https://w3wnews.substack.com/p/20357944_-w3w-07-14-24
-
-- https://gizmodo.com/billionaires-convince-themselves-ai-is-close-to-making-new-scientific-discoveries-2000629060
-
---> 
